# KnowledgeRAG-GZHU

./: .gitignore  .gitmodules  .jscpd.json  .prettierignore  LICENSE  Makefile  README.txt  dev.ps1  docker-compose.lite.yml  docker-compose.offline.yml  docker-compose.tools.yml  docker-compose.yml  install-windows.bat  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rag_backend.spec  readme.md  release-v2.json  start.bat  stop-local.bat  stop.bat
RagBackend/: .coveragerc.core  .coveragerc.stable  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements-docker.txt  requirements-lite.txt  requirements.txt  trace_logging.py  修复报告.md
RagBackend/ASF_SRE/: SRE_mian.py
RagBackend/RAGF_User_Management/: LogonAndLogin.py  QQ_Login.py  Reset_Password.py  User_Management.py  User_settings.py  db_config.py
RagBackend/RAG_M/: RAG_app.py
RagBackend/agent_tools/: agent_advanced.py  agent_task_api.py  enterprise_tools.py  web_search_tool.py
RagBackend/audit/: audit_log.py
RagBackend/billing/: billing_manager.py
RagBackend/config/: settings.py
RagBackend/creation/: doc_creation.py
RagBackend/data/: user_db.sqlite
RagBackend/data_sources/: datasource_manager.py
RagBackend/document_processing/: doc_list.py  doc_manage.py  doc_upload.py  incremental_vectorizer.py  pipeline.py  retrieval_strategy.py  url_import.py
RagBackend/enterprise/: compliance_manager.py  kb_backup.py
RagBackend/evaluation/: eval_panel.py
RagBackend/exception/: __init__.py  exceptions.py
RagBackend/feedback/: feedback_router.py
RagBackend/integrations/: apifox_engine.py  darwin_engine.py  dingtalk_wecom.py  feishu_bot.py  hermes_engine.py  manop_engine.py  obsidian_memory.py  obsidian_sync.py  openmythos_engine.py  task_orchestrator.py  ui_resources.py
RagBackend/knowledge/: doc_comment_manager.py  doc_tag_manager.py  doc_version_manager.py  ocr_parser.py  rbac_manager.py
RagBackend/knowledge_base/: knowledgeBASE4CURD.py  knowledgeBASE4CURD_v2.py  knowledgebase_cover.py
RagBackend/knowledge_graph/: generate_kg.py  testGPH.py
RagBackend/metadata/: obsidian_config.json  obsidian_sync_state.json
RagBackend/models/: kb_schema.py  model_config.py  user_model_config.py
RagBackend/monitoring/: __init__.py  metrics.py
RagBackend/multi_model/: extended_model_router.py  model_router.py
RagBackend/multimodal/: whisper_asr.py
RagBackend/ollama_management/: ollama_sRCP.py
RagBackend/open_api/: api_key_manager.py
RagBackend/rag_enhancement/: conversation_memory.py  rag_evaluator.py  retrieval_visualizer.py
RagBackend/search/: fulltext_search.py
RagBackend/square/: square_api.py
RagBackend/tests/: test_all_fixes.py  test_audit_log_routes.py  test_audit_log_unit.py  test_auth_routes.py  test_doc_upload.py  test_document_loader_import.py  test_exceptions_unit.py  test_kb_crud.py  (+12 more)
(+179 files in other folders)
