[package]
name = "knowledge-rag"
version = "1.0.0"
description = "KnowledgeRAG 智能知识库系统 - 基于 RAG 的文档问答平台"
authors = ["KnowledgeRAG Team"]
license = "MIT"
repository = "https://github.com/March030303/KnowledgeRAG"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
